[gd_scene load_steps=4 format=3 uid="uid://bkqcs3uww747a"]

[ext_resource type="Script" path="res://fix_the_bug_minigame/spawner.gd" id="1_rjrvd"]

[sub_resource type="Curve2D" id="Curve2D_ty2jr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_xjdnl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 128, 128, 0, 0, 0, 0, 192, 64, 0, 0, 0, 0, 320, 184, 0, 0, 0, 0, 448, 72, 0, 0, 0, 0, 576, 192, 0, 0, 0, 0, 704, 64, 0, 0, 0, 0, 824, 184, 0, 0, 0, 0, 960, 64, 0, 0, 0, 0, 1024, 128, 0, 0, 0, 0, 1088, 192, 0, 0, 0, 0, 960, 320, 0, 0, 0, 0, 1088, 448, 0, 0, 0, 0, 1024, 512, 0, 0, 0, 0, 960, 576, 0, 0, 0, 0, 832, 448, 0, 0, 0, 0, 704, 576, 0, 0, 0, 0, 576, 448, 0, 0, 0, 0, 448, 576, 0, 0, 0, 0, 320, 448, 0, 0, 0, 0, 192, 568, 0, 0, 0, 0, 128, 512, 0, 0, 0, 0, 64, 448, 0, 0, 0, 0, 192, 320, 0, 0, 0, 0, 64, 192, 0, 0, 0, 0, 128, 128)
}
point_count = 25

[node name="Spawner" type="Node2D"]
script = ExtResource("1_rjrvd")

[node name="CharacterSpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ty2jr")

[node name="CharacterSpawnLocation" type="PathFollow2D" parent="CharacterSpawnPath"]

[node name="BonusSpawnPath" type="Path2D" parent="."]
position = Vector2(0, 45)
scale = Vector2(1, 0.921875)
curve = SubResource("Curve2D_xjdnl")

[node name="BonusSpawnLocation" type="PathFollow2D" parent="BonusSpawnPath"]
position = Vector2(128, 128)
rotation = -0.785398

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
